k8s/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-api-ingress
  namespace: new-travel-api
spec:
  rules:
    - host: travel-api.test
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: travel-api-service
                port:
                  number: 8442
